# server.go
@@ -174,7 +174,7 @@ func (env *Env) loginHandler(w http.ResponseWriter, r *http.Request) {
 // @Description registration user
 // @Accept json
 // @Produce json
-// @Param input body User true "data for registration"
+// @Param input body LoginUser true "data for registration"
 // @Success 200 {object} JSON
 // @Failure 400,404,500
 // @Router /signup [post]
@@ -297,14 +297,6 @@ func (env *Env) logoutHandler(w http.ResponseWriter, r *http.Request) {
 	http.SetCookie(w, session)
 }
 
-// @Summary NextUser
-// @Description get next user for feed
-// @Accept json
-// @Produce json
-// @Param input body User true "data of current user"
-// @Success 200 {object} JSON
-// @Failure 400,404,500
-// @Router /nextswipeuser [post]
 func (env *Env) nextUserHandler(w http.ResponseWriter, r *http.Request) {
 	var resp JSON
 
